# cellulaire_automaat

./: .gitignore  CMakeLists.txt
config/: test_config.json
data/: map.txt
src/: cell.cpp  cell.h  environment.cpp  environment.h  game.cpp  game.h  hardware.cpp  hardware.h  main.cpp  map.cpp  map.h  render_object.cpp  render_object.h  utills.cpp  utills.h  utils.cpp  utils.h  world.cpp  world.h
